--- a/BackEndCircolo/src/main/resources/application.properties
+++ b/BackEndCircolo/src/main/resources/application.properties
@@ -13,12 +13,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialec
 #spring.main.allow-bean-definition-overriding=true
 server.error.include-message=always
 
-#Per la mail
-
+#Per la mail 
+#hxibesdpejazndnm
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=raul01597@gmail.com
-spring.mail.password=hxibesdpejazndnm
+spring.mail.password=ifzealtyehnukraa
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
